Add customer page UI changes

--- a/packages/wisptools:braintree-customers/client/templates/add.html
+++ b/packages/wisptools:braintree-customers/client/templates/add.html
@@ -1,7 +1,7 @@
 <template name="wtBraintreeCustomersAdd">
   <div class="bg-secondary app-page">
     <div class="container">
-      <h3>Add Braintree Customer</h3><hr />
+      <h3>Add Customer</h3><hr />
       <form class="form-horizontal col-md-8">
         <div class="form-group">
           <label for="firstname" class="col-sm-2 control-label">First Name</label>
@@ -13,6 +13,12 @@
           <label for="lastname" class="col-sm-2 control-label">Last Name</label>
           <div class="col-sm-10">
             <input type="text" class="form-control" id="lastname" placeholder="Last Name">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="companyname" class="col-sm-2 control-label">Company Name</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="companyname" placeholder="Company Name">
           </div>
         </div>
         <div class="form-group">
