--- a/packages/wisptools:braintree-customers/client/templates/customer-edit.html
+++ b/packages/wisptools:braintree-customers/client/templates/customer-edit.html
@@ -8,55 +8,106 @@
         <form class="form-horizontal col-md-8">
           <div class="form-group">
             <label for="firstname" class="col-sm-2 control-label">First Name</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="firstname" placeholder="First Name" value="{{ firstName }}">
+            <div class="col-sm-10 firstName">
+              {{#if editingFirstName}}
+                <input type="text" class="form-control" id="firstname" placeholder="First Name" value="{{ firstName }}">
+              {{else}}
+                <p class="form-control-static editable">
+                  {{ firstName }}
+                  {{> wtEditableIcon}}
+                </p>
+              {{/if}}
             </div>
           </div>
           <div class="form-group">
             <label for="lastname" class="col-sm-2 control-label">Last Name</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="lastname" placeholder="Last Name" value="{{ lastName }}">
+            <div class="col-sm-10 lastName">
+              {{#if editingLastName}}
+                <input type="text" class="form-control" id="lastname" placeholder="Last Name" value="{{ lastName }}">
+              {{else}}
+                <p class="form-control-static editable">
+                  {{ lastName }}
+                  {{> wtEditableIcon}}
+                </p>
+              {{/if}}              
             </div>
           </div>
           <div class="form-group">
             <label for="phone" class="col-sm-2 control-label">Phone</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="phone" placeholder="Phone" value="{{ phone }}">
+            <div class="col-sm-10 phoneNumber">
+              {{#if editingPhone}}
+                <input type="text" class="form-control" id="phone" placeholder="Phone" value="{{ phone }}">
+              {{else}}
+                <p class="form-control-static editable">
+                  {{ phone }}
+                  {{> wtEditableIcon}}
+                </p>
+              {{/if}}
             </div>
           </div>
           <div class="form-group">
             <label for="email" class="col-sm-2 control-label">Email</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="email" placeholder="Email" value="{{ email }}">
+            <div class="col-sm-10 email">
+              {{#if editingEmail}}
+                <input type="text" class="form-control" id="email" placeholder="Email" value="{{ email }}">
+              {{else}}
+                <p class="form-control-static editable">
+                  {{ email }}
+                  {{> wtEditableIcon}}
+                </p>
+              {{/if}}
             </div>
           </div>
           <div class="form-group">
             <label for="address" class="col-sm-2 control-label">Address</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="address" placeholder="Address" value="{{ address }}">
+            <div class="col-sm-10 address">
+              {{#if editingAddress}}
+                <input type="text" class="form-control" id="address" placeholder="Address" value="{{ address }}">
+              {{else}}
+                <p class="form-control-static editable">
+                  {{ address }}
+                  {{> wtEditableIcon}}
+                </p>
+              {{/if}}
             </div>
           </div>
           <div class="form-group">
             <label for="city" class="col-sm-2 control-label">City</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="city" placeholder="City" value="{{ city }}">
+            <div class="col-sm-10 city">
+              {{#if editingCity}}
+                <input type="text" class="form-control" id="city" placeholder="City" value="{{ city }}">
+              {{else}}
+                <p class="form-control-static editable">
+                  {{ city }}
+                  {{> wtEditableIcon}}
+                </p>
+              {{/if}}
             </div>
           </div>
           <div class="form-group">
             <label for="state" class="col-sm-2 control-label">State</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="state" placeholder="State" value="{{ state }}">
+            <div class="col-sm-10 state">
+              {{#if editingState}}
+                <input type="text" class="form-control" id="state" placeholder="State" value="{{ state }}">
+              {{else}}
+                <p class="form-control-static editable">
+                  {{ state }}
+                  {{> wtEditableIcon}}
+                </p>
+              {{/if}}
             </div>
           </div>
           <div class="form-group">
             <label for="zip" class="col-sm-2 control-label">Zip</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="zip" placeholder="Zip" value="{{ zip }}">
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-              <button class="btn btn-primary updateCustomer">Update Customer</button>
+            <div class="col-sm-10 zip">
+              {{#if editingZip}}
+                <input type="text" class="form-control" id="zip" placeholder="Zip" value="{{ zip }}">
+              {{else}}
+                <p class="form-control-static editable">
+                  {{ zip }}
+                  {{> wtEditableIcon}}
+                </p>
+              {{/if}}
             </div>
           </div>
         </form>
