company name field in list and edit pages

--- a/packages/wisptools:braintree-customers/client/templates/customers.html
+++ b/packages/wisptools:braintree-customers/client/templates/customers.html
@@ -26,6 +26,7 @@
             <tr>
               <th>Customer Id</th>
               <th>Name</th>
+              <th>Company Name</th>
               <th>Phone</th>
               <th>Email</th>
               <th>Domain</th>
@@ -38,6 +39,7 @@
             <tr>
               <td>{{ customerId }}</td>
               <td>{{ firstName }} {{ lastName }}</td>
+              <td>{{ company }}</td>
               <td>{{ phone }}</td>
               <td>{{ email }}</td>
               <td>{{ domain }}</td>
