--- a/packages/wisptools:braintree-customers/client/templates/customer-edit.html
+++ b/packages/wisptools:braintree-customers/client/templates/customer-edit.html
@@ -19,6 +19,12 @@
             </div>
           </div>
           <div class="form-group">
+            <label for="companyname" class="col-sm-2 control-label">Company Name</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="companyname" placeholder="Company Name" value="{{ company }}">
+            </div>
+          </div>
+          <div class="form-group">
             <label for="phone" class="col-sm-2 control-label">Phone</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="phone" placeholder="Phone" value="{{ phone }}">
