--- a/application/client/templates/header.html
+++ b/application/client/templates/header.html
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <img src="/readynet.png">
+        <a class="navbar-brand" href="/"><img src="/readynet.png"></a>
       </div>
       <div class="collapse navbar-collapse" id="navigation">
         <ul class="nav navbar-nav">
