--- a/packages/wisptools:braintree-customers/client/templates/customer-edit.html
+++ b/packages/wisptools:braintree-customers/client/templates/customer-edit.html
@@ -8,106 +8,50 @@
         <form class="form-horizontal col-md-8">
           <div class="form-group">
             <label for="firstname" class="col-sm-2 control-label">First Name</label>
-            <div class="col-sm-10 firstName">
-              {{#if editingFirstName}}
-                <input type="text" class="form-control" id="firstname" placeholder="First Name" value="{{ firstName }}">
-              {{else}}
-                <p class="form-control-static editable">
-                  {{ firstName }}
-                  {{> wtEditableIcon}}
-                </p>
-              {{/if}}
+            <div class="col-sm-6">
+              {{ > wtBraintreeClickToEdit fieldName="firstName" fieldValue=firstName fieldPlaceholder="First Name" }}
             </div>
           </div>
           <div class="form-group">
             <label for="lastname" class="col-sm-2 control-label">Last Name</label>
-            <div class="col-sm-10 lastName">
-              {{#if editingLastName}}
-                <input type="text" class="form-control" id="lastname" placeholder="Last Name" value="{{ lastName }}">
-              {{else}}
-                <p class="form-control-static editable">
-                  {{ lastName }}
-                  {{> wtEditableIcon}}
-                </p>
-              {{/if}}              
+            <div class="col-sm-6">
+              {{ > wtBraintreeClickToEdit fieldName="lastName" fieldValue=lastName fieldPlaceholder="Last Name" }}
             </div>
           </div>
           <div class="form-group">
             <label for="phone" class="col-sm-2 control-label">Phone</label>
-            <div class="col-sm-10 phoneNumber">
-              {{#if editingPhone}}
-                <input type="text" class="form-control" id="phone" placeholder="Phone" value="{{ phone }}">
-              {{else}}
-                <p class="form-control-static editable">
-                  {{ phone }}
-                  {{> wtEditableIcon}}
-                </p>
-              {{/if}}
+            <div class="col-sm-6">
+              {{ > wtBraintreeClickToEdit fieldName="phone" fieldValue=phone fieldPlaceholder="Phone" }}
             </div>
           </div>
           <div class="form-group">
             <label for="email" class="col-sm-2 control-label">Email</label>
-            <div class="col-sm-10 email">
-              {{#if editingEmail}}
-                <input type="text" class="form-control" id="email" placeholder="Email" value="{{ email }}">
-              {{else}}
-                <p class="form-control-static editable">
-                  {{ email }}
-                  {{> wtEditableIcon}}
-                </p>
-              {{/if}}
+            <div class="col-sm-6">
+              {{ > wtBraintreeClickToEdit fieldName="email" fieldValue=email fieldPlaceholder="Email" }}
             </div>
           </div>
           <div class="form-group">
             <label for="address" class="col-sm-2 control-label">Address</label>
-            <div class="col-sm-10 address">
-              {{#if editingAddress}}
-                <input type="text" class="form-control" id="address" placeholder="Address" value="{{ address }}">
-              {{else}}
-                <p class="form-control-static editable">
-                  {{ address }}
-                  {{> wtEditableIcon}}
-                </p>
-              {{/if}}
+            <div class="col-sm-6">
+              {{ > wtBraintreeClickToEdit fieldName="address" fieldValue=address fieldPlaceholder="Address" }}
             </div>
           </div>
           <div class="form-group">
             <label for="city" class="col-sm-2 control-label">City</label>
-            <div class="col-sm-10 city">
-              {{#if editingCity}}
-                <input type="text" class="form-control" id="city" placeholder="City" value="{{ city }}">
-              {{else}}
-                <p class="form-control-static editable">
-                  {{ city }}
-                  {{> wtEditableIcon}}
-                </p>
-              {{/if}}
+            <div class="col-sm-6">
+              {{ > wtBraintreeClickToEdit fieldName="city" fieldValue=city fieldPlaceholder="City" }}
             </div>
           </div>
           <div class="form-group">
             <label for="state" class="col-sm-2 control-label">State</label>
-            <div class="col-sm-10 state">
-              {{#if editingState}}
-                <input type="text" class="form-control" id="state" placeholder="State" value="{{ state }}">
-              {{else}}
-                <p class="form-control-static editable">
-                  {{ state }}
-                  {{> wtEditableIcon}}
-                </p>
-              {{/if}}
+            <div class="col-sm-6">
+              {{ > wtBraintreeClickToEdit fieldName="state" fieldValue=state fieldPlaceholder="State" }}
             </div>
           </div>
           <div class="form-group">
             <label for="zip" class="col-sm-2 control-label">Zip</label>
-            <div class="col-sm-10 zip">
-              {{#if editingZip}}
-                <input type="text" class="form-control" id="zip" placeholder="Zip" value="{{ zip }}">
-              {{else}}
-                <p class="form-control-static editable">
-                  {{ zip }}
-                  {{> wtEditableIcon}}
-                </p>
-              {{/if}}
+            <div class="col-sm-6">
+              {{ > wtBraintreeClickToEdit fieldName="zip" fieldValue=zip fieldPlaceholder="Zip" }}
             </div>
           </div>
         </form>
@@ -215,5 +159,18 @@
         </table>
       </div>
     </div>
+  </div>
+</template>
+
+<template name="wtBraintreeClickToEdit">
+  <div class="click-to-edit-area">
+    {{#if isEditing fieldName}}
+      <input type="text" class="form-control" id="{{ fieldName }}" placeholder="{{ fieldPlaceholder }}" value="{{ fieldValue }}">
+    {{else}}
+      <p class="form-control-static editable">
+        {{ fieldValue }}
+        {{> wtEditableIcon}}
+      </p>
+    {{/if}}
   </div>
 </template>
