Edit customer page UI modifications

--- a/packages/wisptools:braintree-customers/client/templates/braintree-edit-form.html
+++ b/packages/wisptools:braintree-customers/client/templates/braintree-edit-form.html
@@ -37,7 +37,7 @@
         </div>
       </div>
 
-      <button value="submit" id="submit" class="btn btn-primary btn-lg center-block">Update Payment Method</button>
+      <button value="submit" id="submit" class="btn btn-primary pull-right">Update Payment Method</button>
     </form>
   </div>
 </template>
