--- a/packages/wisptools:braintree-customers/client/templates/braintree-form.html
+++ b/packages/wisptools:braintree-customers/client/templates/braintree-form.html
@@ -37,7 +37,7 @@
         </div>
       </div>
 
-      <button value="submit" id="submit" class="btn btn-success btn-lg center-block">Add Payment Method</button>
+      <button value="submit" id="submit" class="btn btn-success pull-right">Add Payment Method</button>
     </form>
   </div>
 </template>
