--- a/packages/wisptools:braintree-customers/client/templates/customer-edit.html
+++ b/packages/wisptools:braintree-customers/client/templates/customer-edit.html
@@ -7,55 +7,55 @@
       <div class="row">
         <form class="form-horizontal col-md-8">
           <div class="form-group">
-            <label for="firstname" class="col-sm-2 control-label">First Name</label>
+            <label for="firstname" class="col-sm-3 control-label">First Name</label>
             <div class="col-sm-6">
               {{ > wtBraintreeClickToEdit fieldName="firstName" fieldValue=firstName fieldPlaceholder="First Name" }}
             </div>
           </div>
           <div class="form-group">
-            <label for="lastname" class="col-sm-2 control-label">Last Name</label>
+            <label for="lastname" class="col-sm-3 control-label">Last Name</label>
             <div class="col-sm-6">
               {{ > wtBraintreeClickToEdit fieldName="lastName" fieldValue=lastName fieldPlaceholder="Last Name" }}
             </div>
           </div>
           <div class="form-group">
-            <label for="companyname" class="col-sm-2 control-label">Company Name</label>
+            <label for="companyname" class="col-sm-3 control-label">Company Name</label>
             <div class="col-sm-6">
               {{ > wtBraintreeClickToEdit fieldName="company" fieldValue=company fieldPlaceholder="Company Name" }}
             </div>
           </div>
           <div class="form-group">
-            <label for="phone" class="col-sm-2 control-label">Phone</label>
+            <label for="phone" class="col-sm-3 control-label">Phone</label>
             <div class="col-sm-6">
               {{ > wtBraintreeClickToEdit fieldName="phone" fieldValue=phone fieldPlaceholder="Phone" }}
             </div>
           </div>
           <div class="form-group">
-            <label for="email" class="col-sm-2 control-label">Email</label>
+            <label for="email" class="col-sm-3 control-label">Email</label>
             <div class="col-sm-6">
               {{ > wtBraintreeClickToEdit fieldName="email" fieldValue=email fieldPlaceholder="Email" }}
             </div>
           </div>
           <div class="form-group">
-            <label for="address" class="col-sm-2 control-label">Address</label>
+            <label for="address" class="col-sm-3 control-label">Address</label>
             <div class="col-sm-6">
               {{ > wtBraintreeClickToEdit fieldName="address" fieldValue=address fieldPlaceholder="Address" }}
             </div>
           </div>
           <div class="form-group">
-            <label for="city" class="col-sm-2 control-label">City</label>
+            <label for="city" class="col-sm-3 control-label">City</label>
             <div class="col-sm-6">
               {{ > wtBraintreeClickToEdit fieldName="city" fieldValue=city fieldPlaceholder="City" }}
             </div>
           </div>
           <div class="form-group">
-            <label for="state" class="col-sm-2 control-label">State</label>
+            <label for="state" class="col-sm-3 control-label">State</label>
             <div class="col-sm-6">
               {{ > wtBraintreeClickToEdit fieldName="state" fieldValue=state fieldPlaceholder="State" }}
             </div>
           </div>
           <div class="form-group">
-            <label for="zip" class="col-sm-2 control-label">Zip</label>
+            <label for="zip" class="col-sm-3 control-label">Zip</label>
             <div class="col-sm-6">
               {{ > wtBraintreeClickToEdit fieldName="zip" fieldValue=zip fieldPlaceholder="Zip" }}
             </div>
@@ -71,11 +71,13 @@
       </div>
       {{/if}}
       <h4>Payment Methods</h4>
-      {{#unless showPaymentEditForm}}
       <div class="row">
+      {{#if showPaymentAddForm}}
         {{ > wtBraintreeAddPaymentMethodForm }}
+      {{else}}
+        <button class="btn btn-success addCreditCardBtn pull-right">Add Credit Card</button><br><br>
+      {{/if}}
       </div>
-      {{/unless}}
       <div class="row">
         <table class="table table-bordered">
           <thead>
@@ -176,7 +178,7 @@
       <input type="text" class="form-control" id="{{ fieldName }}" placeholder="{{ fieldPlaceholder }}" value="{{ fieldValue }}">
     {{else}}
       <p class="form-control-static editable">
-        {{ fieldValue }}
+        {{ fieldValue }} &nbsp;
         {{> wtEditableIcon}}
       </p>
     {{/if}}
