--- a/packages/wisptools:managed-router-domains/client/templates/managedomains.html
+++ b/packages/wisptools:managed-router-domains/client/templates/managedomains.html
@@ -1,54 +1,50 @@
 <template name="wtManagedRouterMySQLManageDomains">
-  <div class="bg-secondary app-page">
-    <div class="container">
-      <table class="table table-hover"  >
-        <thead>
-          <tr>
-            <th>Domains</th>
-            <th>Update ACS</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          {{#each domainList}}
-          <tr>
-            <td class="domainName editable">
-              {{#if editingDomain}}
-                <input class="form-control" type="text" id="editDomain" value="{{domain}}">
-              {{else}}
-                {{domain}}
-                {{> wtEditableIcon}}
-              {{/if}}
-            </td>
-            <td>
-              <input type="checkbox" name="updateACS" value="1" class="update-acs-chkbx" {{updateACS}}>
-            </td>
-            <td>
-              <a href="#" class="remove-domain btn btn-default btn-xs pull-right" data-toggle="modal" data-target="#confirmModal">
-                <i class="fa fa-times"></i>
-              </a>
-            </td>
-          </tr>
-          {{/each}}
-        </tbody>
-        <tfoot>
-          <tr>
-            <td>
-              <div class="input-group">
-                <input type="text" class="form-control" id="domainName">
-                <span class="input-group-addon">
-                  <input type="checkbox" id="updateACS"> Update ACS
-                </span>
-              </div>
-            </td>
-            <td>
-              <button class="btn btn-primary btn-xs addDomainbtn">Add Domain</button>
-            </td>
-          </tr>
-        </tfoot>        
-      </table>
-    </div>
-  </div>
+  <table class="table table-hover"  >
+    <thead>
+      <tr>
+        <th>Domains</th>
+        <th>Update ACS</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each domainList}}
+      <tr>
+        <td class="domainName editable">
+          {{#if editingDomain}}
+            <input class="form-control" type="text" id="editDomain" value="{{domain}}">
+          {{else}}
+            {{domain}}
+            {{> wtEditableIcon}}
+          {{/if}}
+        </td>
+        <td>
+          <input type="checkbox" name="updateACS" value="1" class="update-acs-chkbx" {{updateACS}}>
+        </td>
+        <td>
+          <a href="#" class="remove-domain btn btn-default btn-xs pull-right" data-toggle="modal" data-target="#confirmModal">
+            <i class="fa fa-times"></i>
+          </a>
+        </td>
+      </tr>
+      {{/each}}
+    </tbody>
+    <tfoot>
+      <tr>
+        <td>
+          <div class="input-group">
+            <input type="text" class="form-control" id="domainName">
+            <span class="input-group-addon">
+              <input type="checkbox" id="updateACS"> Update ACS
+            </span>
+          </div>
+        </td>
+        <td>
+          <button class="btn btn-primary addDomainbtn">Add Domain</button>
+        </td>
+      </tr>
+    </tfoot>        
+  </table>
   {{> wtManagedRouterDeleteDomain}}
 </template>
 
