adjusting forbidden page text

--- a/application/client/templates/include/access_denied.html
+++ b/application/client/templates/include/access_denied.html
@@ -1,5 +1,5 @@
 <template name="accessDenied">
   <div class="jumbotron">
-    <center><h2>Authorized Access Only!</h2></center>
+    <center><h2>To access this page, please create a free account or login.</h2></center>
   </div>
 </template>
