Add Addons and discounts with a subscription

--- a/packages/wisptools:braintree-customers/client/templates/customer-edit-payment-panel.html
+++ b/packages/wisptools:braintree-customers/client/templates/customer-edit-payment-panel.html
@@ -40,6 +40,8 @@
         Balance : {{balance}}<br>
         Next Bill Amount: {{nextBillAmount}}<br>
         Next Billing Date: {{nextBillingDate}}<br>
+        {{#if addonName}}Addons: {{addonName}}<br>{{/if}}
+        {{#if discountName}}Discounts: {{discountName}}<br>{{/if}}
         Status: {{status}}<br>
         {{#if isActive}}
         <button class="btn btn-danger cancelSubscription">Cancel</button>
