Show message if Braintree payment not configured

--- a/packages/wisptools:braintree-customers/client/templates/add.html
+++ b/packages/wisptools:braintree-customers/client/templates/add.html
@@ -2,67 +2,76 @@
   <div class="bg-secondary app-page">
     <div class="container">
       <h3>Add Customer</h3><hr />
-      <form class="form-horizontal col-md-8">
-        <div class="form-group">
-          <label for="firstname" class="col-sm-2 control-label">First Name</label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="firstname" placeholder="First Name">
-          </div>
+      <div class="row">
+        {{#unless hasBraintreeSettings}}
+        <div class="alert alert-danger" role="alert">
+          In order to start using this feature, Braintree Payments needs to be configured by the Domain Admin.
         </div>
-        <div class="form-group">
-          <label for="lastname" class="col-sm-2 control-label">Last Name</label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="lastname" placeholder="Last Name">
+        {{/unless}}
+      </div>
+      <div class="row">
+        <form class="form-horizontal col-md-8">
+          <div class="form-group">
+            <label for="firstname" class="col-sm-2 control-label">First Name</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="firstname" placeholder="First Name">
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label for="companyname" class="col-sm-2 control-label">Company Name</label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="companyname" placeholder="Company Name">
+          <div class="form-group">
+            <label for="lastname" class="col-sm-2 control-label">Last Name</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="lastname" placeholder="Last Name">
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label for="phone" class="col-sm-2 control-label">Phone</label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="phone" placeholder="Phone">
+          <div class="form-group">
+            <label for="companyname" class="col-sm-2 control-label">Company Name</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="companyname" placeholder="Company Name">
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label for="email" class="col-sm-2 control-label">Email</label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="email" placeholder="Email">
+          <div class="form-group">
+            <label for="phone" class="col-sm-2 control-label">Phone</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="phone" placeholder="Phone">
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label for="address" class="col-sm-2 control-label">Address</label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="address" placeholder="Address">
+          <div class="form-group">
+            <label for="email" class="col-sm-2 control-label">Email</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="email" placeholder="Email">
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label for="city" class="col-sm-2 control-label">City</label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="city" placeholder="City">
+          <div class="form-group">
+            <label for="address" class="col-sm-2 control-label">Address</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="address" placeholder="Address">
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label for="state" class="col-sm-2 control-label">State</label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="state" placeholder="State">
+          <div class="form-group">
+            <label for="city" class="col-sm-2 control-label">City</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="city" placeholder="City">
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label for="zip" class="col-sm-2 control-label">Zip</label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="zip" placeholder="Zip">
+          <div class="form-group">
+            <label for="state" class="col-sm-2 control-label">State</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="state" placeholder="State">
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <div class="col-sm-offset-2 col-sm-10">
-            <button class="btn btn-default addCustomer">Add Customer</button>
+          <div class="form-group">
+            <label for="zip" class="col-sm-2 control-label">Zip</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="zip" placeholder="Zip">
+            </div>
           </div>
-        </div>
-      </form>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <button class="btn btn-default addCustomer">Add Customer</button>
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </template>
