--- a/packages/wisptools:braintree-customers/client/templates/customer-edit-payment-panel.html
+++ b/packages/wisptools:braintree-customers/client/templates/customer-edit-payment-panel.html
@@ -28,6 +28,18 @@
       {{else}}
         {{ > wtBraintreeAddOneTimeChargePanel}}
       {{/if}}
+      <div class="col-md-12" style="text-align:right">
+        <button class="btn btn-primary btn-xs showTransactionsPanelBtn">
+          {{#if showTransactionsPanel}}
+          Hide Transactions
+          {{else}}
+          Show Transactions
+          {{/if}}
+        </button>
+      </div>
+      {{#if showTransactionsPanel}}
+        {{ > wtBraintreeTransactionsPanel}}
+      {{/if}}
     </div>
   </div>
 </template>
@@ -135,6 +147,46 @@
           </div>
         </form>
         <span class="pull-right createSubscription"><a href="">Create subscription</a></span>
+      </div>
+    </div>
+  </div>
+</template>
+
+<template name="wtBraintreeTransactionsPanel">
+  <div class="col-md-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Transactions
+      </div>
+      <div class="panel-body">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Date</th>
+              <th>Type</th>
+              <th>Amount</th>
+              <th>Status</th>
+              <th>Recurring</th>
+            </tr>
+          </thead>
+          <tbody>
+            {{#if transactions}}
+              {{#each transactions}}
+              <tr>
+                <td>{{ date }}</td>
+                <td>{{ type }}</td>
+                <td>$ {{ amount }}</td>
+                <td>{{ status }}</td>
+                <td>{{ recurringMsg }}</td>
+              </tr>
+              {{/each}}
+            {{else}}
+              <tr>
+                <td colspan="5">No transactions found.</td>
+              </tr>
+            {{/if}}
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
