Display managed routers in customer page

--- a/packages/wisptools:braintree-customers/client/templates/customer-edit.html
+++ b/packages/wisptools:braintree-customers/client/templates/customer-edit.html
@@ -96,6 +96,9 @@
     </div>
   </div>
   {{/if}}
+
+  <h4>Managed Routers</h4><hr>
+  {{ > wtManagedRouterMySQLList hideSearchField=true}}
 </template>
 
 <template name="wtBraintreeClickToEdit">
