Display filtered managed routers in customer page

--- a/packages/wisptools:braintree-customers/client/templates/customer-edit.html
+++ b/packages/wisptools:braintree-customers/client/templates/customer-edit.html
@@ -97,8 +97,12 @@
   </div>
   {{/if}}
 
-  <h4>Managed Routers</h4><hr>
-  {{ > wtManagedRouterMySQLList hideSearchField=true}}
+  {{#if customer}}
+  {{#with customer}}
+    <h4>Managed Routers</h4><hr>
+    {{ > wtManagedRouterMySQLList hideSearchField=true customerId=customerId}}
+  {{/with}}
+  {{/if}}
 </template>
 
 <template name="wtBraintreeClickToEdit">
